--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <hr>
 <h1>company members</h1>
 <a href="pandu.html">PANDU</a><br>
-<a href="MS. kant">KANT</a>
+<a href=" kant">KANT</a>
 <hr>
 <h3>team members</h3>
 <a href="dharn.html">DHARN</a><br>
